tests/baselines/reference/staticMemberExportAccess.errors.txt
==== tests/cases/compiler/staticMemberExportAccess.ts (3 errors) ====
    class Sammy {
       foo() { return "hi"; }
      static bar() {
        return -1;
       }
    }
    module Sammy {
        export var x = 1;
    }
    interface JQueryStatic {
        sammy: Sammy; // class instance
    }
    var $: JQueryStatic;
    var instanceOfClassSammy: Sammy = new $.sammy(); // should be error (bug 725997)
                                            ~~~~~
!!! staticMemberExportAccess.ts(14,41): error TS2083: Invalid 'new' expression.
    var r1 = instanceOfClassSammy.foo(); // r1 is string
    var r2 = $.sammy.foo();
    var r3 = $.sammy.bar(); // error
                     ~~~
!!! staticMemberExportAccess.ts(17,18): error TS2094: The property 'bar' does not exist on value of type 'Sammy'.
    var r4 = $.sammy.x; // error
                     ~
!!! staticMemberExportAccess.ts(18,18): error TS2094: The property 'x' does not exist on value of type 'Sammy'.
    
    Sammy.bar();